fixed title screens on mobile, and made the drop down not spill over

--- a/src/ui/src/variables.scss
+++ b/src/ui/src/variables.scss
@@ -10,8 +10,8 @@ $dark-gray: #151313;
 
 // Updated high-contrast colors
 $blue: lighten(#2278ff, 20%); // Lighter blue
-$red: lighten(#fe0400, 20%);  // Lighter red
-$orange: lighten(#ffa500, 10%); // Lighter orange
+$red: lighten(#fe0000, 20%);  // Lighter red
+$orange: #ffb732;
 $white: white; // Keep white as is
 
 $wood: #125d1c;
